<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_imagen"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/icono1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        android:contentDescription="@string/user_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUser"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toEndOf="@+id/userImage"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user"
            android:inputType="text"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="401dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/passImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/icono2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage"
        android:contentDescription="@string/user_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/passImage"
        app:layout_constraintTop_toBottomOf="@+id/inputUser"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="401dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        android:backgroundTint="@color/colorPrimary"
        />

</androidx.constraintlayout.widget.ConstraintLayout>